[package]
name = "puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_extras = { version = "0.23.0", features = ["all_loaders"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.eframe]
version = "0.23.0"


[dependencies.image]
image = { version = "0.24.7" } # Add the types you want support for
